dev/lucky-spin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lucky-spin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lucky-spin
  template:
    metadata:
      labels:
        app: lucky-spin
    spec:
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: laravel-pvc
      containers:
        # Laravel (PHP 8.4 + FPM)
        - name: lucky-spin-app
          image: laravel-app:latest
          ports:
            - containerPort: 9000

        # NGINX (Uses ConfigMap)
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              name: nginx-config

        # PostgreSQL
        - name: postgresql
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
