dev/lucky-spin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lucky-spin-service
spec:
  selector:
    app: laravel-stack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
