dev/lucky-spin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lucky-spin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: lucky.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lucky-spin-service
                port:
                  number: 80
